Added the Following Layout Files: • home_layout • maintain_assignment_layout • maintain_lecture_times_layout • maintain_test_layout • send_email_layout • timetable_layout • upcoming_events_layout
Added The Following Class Files:
• HomeFragment
• MaintainAssignmentFragment
• MaintainLectureTimesFragment
• MaintainTestFragment
• SendEmailFragment
• TimetableFragment
• UpcomingEventsFragment

Added Navigation code:
• When item in Navigation View pressed, replace fragment_container with the
appropriate fragment and add it to the back stack

Added the following to settings Toolbar:
• added a "Switch User" item to toolbar list
• When Switch Item pressed switch between Lecturer User and Student User and then
replace and inflate Navigation drawer accordingly (This is for testing purposes).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Log Out</string>
+    <string name="action_settings_logout">Log Out</string>
+    <string name="action_settings_switch_user">Switch User</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
@@ -29,6 +30,6 @@
     <!-- Lecturer Nav Bar -->
     <string name="nav_assignments">Assignments</string>
     <string name="nav_tests">Tests</string>
-    <string name="nav_notification">Send Notification</string>
+    <string name="nav_email">Send Email</string>
 
 </resources>
