Added Following UI to the Maintain Assignment Screen: • Added a Spinner containing modules to choose from (placeholder) • Added A Separation Line • Added Textviews for Date, Time and Title • Added RecyclerView that will be used to host the Assignment Fragments • Added Floating Action Button to be used for adding a New Assignment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_settings_switch_user">Switch User</string>
     <string name="title_activity_login">Sign in</string>
 
+
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
@@ -31,5 +33,12 @@
     <string name="nav_assignments">Assignments</string>
     <string name="nav_tests">Tests</string>
     <string name="nav_email">Send Email</string>
+
+    <!-- Test Values for Spinner -->
+    <string-array name="modules">
+        <item>WRAP301</item>
+        <item>WRAP302</item>
+        <item>WRA301</item>
+    </string-array>
 
 </resources>
